<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Auto Auction</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sellertext">Seller</string>
    <string name="buyertext">Buyer</string>
    <string name="choseone">Chose One:</string>
    <string name="pricetext">Seller Price:</string>
    <string name="pricehint">5.00</string>
    <string name="submittext">Submit</string>

</resources>
